--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  s3_storage: ^1.0.4
+  minio_flutter: ^0.0.1
   file_picker: ^6.2.0
 
 dev_dependencies:
